--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="icon" href="./img/icon.png" type="image/x-icon">
   <title>SAÉ</title>
 </head>
 <body>
@@ -11,56 +14,94 @@
 
 <script id="listEntreeTemplate" type="text/x-handlebars-template">
 	<section id="list">
+    <header>
+    <h1>Web Directory, l'annuaire en ligne</h1>
+    <nav>
+    <input type="text" id="searchInput" placeholder="Rechercher un nom">
     <select id="select">
-      <option value=""></option>
-      <option value="/api/entrees?sort=nom-asc">Aucun tri</option>
+      <option value="/api/entrees">Tous les services</option>
       {{#each services}}
         <option value="{{this.links.collections.href}}">{{this.service.nom}}</option>
       {{/each}}
     </select>
-    <h2>{{tri}}</h2>
+    <select id="tri">
+      <option value="">Aucun tri</option>
+      <option value="sort=nom-asc">Nom (A-Z)</option>
+      <option value="sort=nom-desc">Nom (Z-A)</option>
+    </select>
+    <button id="search">Rechercher</button>
+    </nav>  
+  </header>
+    <h2>Liste des contacts ({{tri}})</h2>
+    <div class="entrees">
     {{#if entrees}}
       {{#each entrees}}
-        <h4>{{this.entree.lastName}} {{this.entree.firstName}}</h4> 
-        <button class="voir" url="{{this.links.self.href}}">Voir</button>
-        <p>Services :</p>
+      <div class="entree">
+        <div class="profilePic">
+          {{#if this.entree.image}}
+            <img src="{{this.entree.image}}">
+          {{else}}
+            <div class="initiales">{{this.entree.initiales}}</div>
+          {{/if}}
+        </div>
+        <h3>{{this.entree.firstName}} <span class="uppercase">{{this.entree.lastName}}</span></h3> 
+        <div>
         <ul>
           {{#each this.entree.services}}
             <li>{{this}}</li>
           {{/each}}
         </ul>
+        </div>
+        <button class="voir" url="{{this.links.self.href}}">Voir</button>
+      </div>
       {{/each}}
     {{else}}
     <p>Aucune entrée dans ce service</p>
     <button id="home">Home</button>
     {{/if}}
+    </div>
 	 </section>
+   <div id="popup-bg" class="hide">
+    <div id="popup">
+      <div id="popup-header">
+        <button id="home">← Retour</button>
+        <p>Informations de <span id="firstNameInfo"></span> <span class="uppercase" id="lastNameInfo"></span> </p>
+      </div>
+      <div id="popup-content"></div>
+    </div>
+   </div>
 </script>
 
 <script id="entreeTemplate" type="text/x-handlebars-template">
-	<section id="entree">
+	<div id="entree">
     {{#if image}}
 		  <img src="{{image}}">
       {{else}}
-      <p>{{initiales.nom}}{{initiales.prenom}}</p>
+      <div class="profilePic">{{initiales.prenom}}{{initiales.nom}}</div>
     {{/if}}
-    <h4>{{data.lastName}} {{data.firstName}}</h4>
-    <p>Fonction : {{data.fonction}}</p>
+    <h3>{{data.lastName}} {{data.firstName}}</h3>
+    <p>{{data.fonction}}</p>
+    <div class="info">
     <p>Numéro de bureau : {{data.numBureau}}</p>
-    <p>Services :</p>
-    <ul>
+    <div class="services">
+    <div>Services :</div>
       {{#each services}}
-        <li>{{this}}</li>
+        
+        {{#if @last}}
+          <div class="service">{{this}}</div>
+        {{else}}
+        <div class="service">{{this}},</div>
+        {{/if}}
       {{/each}}
-    </ul>
-    <h4>Informations de contact</h4>
-    <div>
-      <a href="mailto:{{data.email}}">{{data.email}}</a>
-      <a href="tel:{{data.telMobile}}">{{data.telMobile}}</a>
-      <a href="tel:{{data.telFixe}}">{{data.telFixe}}</a>
     </div>
-    <button id="home">Home</button>
-	 </section>
+  </div>
+    <div id="contactList">
+      <h4>Informations de contact</h4>
+      <div class="contactTile" onclick="window.open('mailto:{{data.email}}')"><p>Email : {{data.email}}</p></div>
+      <div class="contactTile" onclick="window.open('tel:{{data.telMobile}}')"><p>Téléphone (mobile) : {{data.telMobile}}</p></div>
+      <div class="contactTile" onclick="window.open('tel:{{data.telFixe}}')"><p>Téléphone (fixe) : {{data.telFixe}}</p></div>
+    </div>
+  </div>
 </script>
 
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
